--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
         <h3>
             Hello, World!
-            안녕하세요 반갑습니다
+            안녕하세요, 반갑습니다!
              </h3>
     </body>
 </head
