--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
     <body>
         <h3>
-            Hello, World! <br>
-            안녕하세요, 반갑습니다!
+            Hello, World! <br>안녕하세요, 반갑습니다!
              </h3>
     </body>
 </head
