--- a/index.html
+++ b/index.html
@@ -1,8 +1,110 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <body>
-        <h3>
-            Hello, World! <br>안녕하세요, 반갑습니다!
-             </h3>
-    </body>
-</head
+<meta charset='utf-8'>
+<style>
+    table, th, tr, td {
+        border: solid 1px black;
+        border-collapse: collapse;
+        padding: 8px;
+    }
+    </style>
+</head>
+<body>
+    <h3>
+        시간표
+    </h3>
+<table>
+    <tr>
+        <td></td>
+        <th>월요일</th>
+        <th>화요일</th>
+        <th>수요일</th>
+        <th>목요일</th>
+        <th>금요일</th>
+    </tr>
+    <tr>
+        <td>1교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+<tr>
+        <td>2교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+<tr>
+        <td>3교시</td>
+        <td></td>
+        <td rowspan="2">마케팅의이해</td>
+        <td></td>
+        <td>채플</td>
+        <td></td>
+    </tr>
+<tr>
+        <td>4교시</td>
+        <td></td>
+        <td>대학영어회화2</td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>5교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>6교시</td>
+        <td></td>
+        <td rowspan="2">웹프로그래밍</td>
+        <td rowspan="2">실용생활중국어</td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>7교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>8교시</td>
+        <td>대학영어<br>강독2</td>
+        <td rowspan="3">4차산업혁명과<br>유비쿼터스</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>9교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>10교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td>11교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+
+</table>
+
+</body>
+</html>
