--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h3>
-        시간표
+        22년도 1학기 시간표
     </h3>
 <table>
     <tr>
@@ -105,6 +105,9 @@
     </tr>   
 
 </table>
+<form action="form.html">
+    <button>회원가입</button>
+</form>
 
 
 </body>
