--- a/index.html
+++ b/index.html
@@ -2,113 +2,31 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<style>
-    table, th, tr, td {
-        border: solid 1px black;
-        border-collapse: collapse;
-        padding: 8px;
-    }
-    </style>
 </head>
 <body>
-    <h3>
-        22년도 1학기 시간표
-    </h3>
-<table>
-    <tr>
-        <td></td>
-        <th>월요일</th>
-        <th>화요일</th>
-        <th>수요일</th>
-        <th>목요일</th>
-        <th>금요일</th>
-    </tr>
-    <tr>
-        <td>1교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-<tr>
-        <td>2교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
-<tr>
-        <td>3교시</td>
-        <td></td>
-        <td rowspan="2">마케팅의이해</td>
-        <td></td>
-        <td>채플</td>
-        <td></td>
-    </tr>
-<tr>
-        <td>4교시</td>
-        <td></td>
-        <td>대학영어회화2</td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>5교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>6교시</td>
-        <td></td>
-        <td rowspan="2">웹프로그래밍</td>
-        <td rowspan="2">실용생활중국어</td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>7교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>8교시</td>
-        <td>대학영어<br>강독2</td>
-        <td rowspan="3">4차산업혁명과<br>유비쿼터스</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>9교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>10교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>11교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-
-</table>
-<form action="form.html">
-    <button>회원가입</button>
+    <h3><b>회원 가입</b></h3>
+<form action="20190577변희재.html">
+     -이름: <input type="text"><br>
+     -비밀번호: <input type="password"><br>
+     -성별: <input type="radio" name="info"> 남성
+           <input type="radio" name="info"> 여성<br>
+     -취미: <input type="checkbox">영화감상
+            <input type="checkbox">게임
+            <input type="checkbox">음악듣기<br>
+     -파일 첨부: <input type="file"><br>
+     -이메일: <input type="text">@
+     <select>
+         <option>---선택---</option>
+         <option>naver.com</option>
+         <option>daum.net</option>
+         <option>gmail.com</option>
+     </select>
+     <br>
+     -자기소개: <textarea row="40" col="100"></textarea>
+     <br><hr>
+     <button type="submit">확인</button>
+     <button type="reset">취소</button>
+     
 </form>
-
-
 </body>
 </html>
