--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </tr>   
 
 </table>
-<a href='form.html'>회원가입</a><br>
-<a href="rubato.html">루바토 펜션 안내</a>
+<a href='form.html'>[회원가입]</a><br>
+<a href="rubato.html">[루바토 펜션 안내]</a>
 </body>
 </html>
