--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
     </tr>   
 
 </table>
-<a href='form.html'>[회원가입]</a><br>
-<a href="rubato.html">[루바토 펜션 안내]</a>
+<a href='form.html'>회원가입</a><br>
+<a href="rubato.html">루바토 펜션 안내</a><br>
+<a href="행사안내.html">호서 국제 기타 페스티벌</a>
 </body>
 </html>
