--- a/결과.html
+++ b/결과.html
@@ -8,7 +8,7 @@
 <head>
     <body>
         <h1><b>문의사항이 잘 접수되었습니다.</b></h1>
-        <b id="red">고맙습니다</b><br>
+        <b id="red">고맙습니다.</b><br>
         <a href="행사안내.html">[되돌아가기]</a><a href="index.html">[첫 화면으로]</a>
     </body>
 </head>
