--- a/20190577변희재.html
+++ b/20190577변희재.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<style>
+    li {
+        list-style-image: url('arrow.gif')
+    }
+    span {
+        color: cornflowerblue;
+    }
+</style>
 </head>
 <body>
 <img src="주커버그.jpg">
@@ -19,16 +27,17 @@ email: pion0458@gmail.com
 <hr>
 <h1>
     <b>
-     Skills
+    Skills
     </b>
 </h1>
 <ui>
-     사용언어
+     <span><b>사용언어</b></span>
      <li>HTML</li>
-     <li>CSS</li>                  
+     <li>CSS</li>
+     <li>Phython</li>                  
 </ui>
 <ui>
-    사용 툴
+    <span><b>사용 툴</b></span>
     <li>Visual Studio</li>
     <li>Premiere Pro</li>
     <li>Photoshop</li>
