--- a/행사안내.html
+++ b/행사안내.html
@@ -25,7 +25,7 @@
         <li><b>일시</b>: 2022년 07월 15일~ 08월 15일</li>
         <li><b>장소</b>: <span id="green"><span class="line">호서대학교 대강당</span></span></li>
         <li><b>주최</b>: 호서대학교 디지털기술경영학과</li>
-        <li><b>사회</b>: <span id="blue"><b id="shadow2">20190577 변희재</b></span></li>
+        <li><b>사회</b>: <a href="20190577변희재.html"><span id="blue"><b id="shadow2">20190577 변희재</b></span></a></li>
         <li><b>문의사항</b>:</li><textarea row="40" col="100"></textarea><br>
         <a href="결과.html"><button>문의사항제출</button></a>
     </ul>
