--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 </table>
 <a href='form.html'>회원가입</a><br>
 <a href="rubato.html">루바토 펜션 안내</a><br>
-<a href="행사안내.html">호서 국제 기타 페스티벌</a>
+<a href="행사안내.html">호서 국제 기타 페스티벌 안내</a><br>
+<a href="호서 야간 개장.html">호서 야간 개장 안내</a>
 </body>
 </html>
