--- a/호서 야간 개장.html
+++ b/호서 야간 개장.html
@@ -18,6 +18,7 @@
 <meta charset='utf-8'>
 </head>
 <body>
+    <form action="신청접수완료.html">
     <h3>주말 야간 개장 안내</h3>
     <ul>
     <li>-<b>기간</b>: 4.28~8.20 18:00~22:00 (입장마감 21시)<br></li>
@@ -25,8 +26,8 @@
     <li>-<b>프로그램</b>: 야간동물원 관람, 동물생태 설명회, 식물전시<br></li>
     <li>-<b>방문자 신분</b>:
     <input type='radio' name="info">호서대 재학생 <input type='radio' name="info">일반인
-     <a href="신청접수완료.html"><button>방문신청</button></a></li>
+     <button type="submit">방문신청</button></li>
     </ul>
-
+</form>
 </body>
 </html>
