--- a/20190577변희재.html
+++ b/20190577변희재.html
@@ -4,25 +4,31 @@
 <meta charset='utf-8'>
 <style>
     li {
-        list-style-image: url('arrow.gif')
+        list-style-image: url('img/arrow.gif')
     }
     span {
         color: cornflowerblue;
     }
+    a:link {text-decoration: none; color: black;}
+    a:visited {text-decoration: none; color: black;}
+    a:hover {text-decoration: none; color: cornflowerblue;}
+    body {text-align: center;}
+    b {text-shadow: 1px 2px 10px cornflowerblue;}
 </style>
 </head>
 <body>
-<img src="주커버그.jpg">
+<img src="img/주커버그.jpg">
 
     <h1>
     <b>변희재 (Byeon, HeeJae)</b>
 </h1>
-email: pion0458@gmail.com
+Email: pion0458@gmail.com<br>
+KakaoTalk: bhj0458
 <h1>
     <b>This is me</b> 
 </h1>
  풀 스택 개발에 관심을 가지고 있습니다.<br>
- 현재 호서대학교 디지털 기술 경영학과에 재학중이며, 마케팅 공부도 하고 있습니다.
+ 현재 호서대학교 디지털기술경영학과에 재학중이며, 마케팅 공부도 하고 있습니다.
 
 <hr>
 <h1>
@@ -31,26 +37,45 @@ email: pion0458@gmail.com
     </b>
 </h1>
 <ui>
-     <span><b>사용언어</b></span>
-     <li>HTML</li>
-     <li>CSS</li>
-     <li>Phython</li>                  
+     <span><h3>사용언어</h3></span>
+     <li><img src="img/html.jpg"
+        style="width:20px; height:20px;"
+        >HTML</li>
+     <li><img src="img/css.jpg"
+        style="width:20px; height:20px;"
+        >CSS</li>
+     <li><img src="img/python.jpg"
+        style="width:20px; height:20px;"
+        >Phython</li>                  
 </ui>
 <ui>
-    <span><b>사용 툴</b></span>
-    <li>Visual Studio</li>
-    <li>Premiere Pro</li>
-    <li>Photoshop</li>
+    <span><h3>사용 툴</h3></span>
+    <li><img src="img/vsc.jpg"
+        style="width:20px; height:20px;"
+        >Visual Studio</li>
+    <li><img src="img/pr.jpg"
+        style="width:20px; height:20px;"
+        >Premiere Pro</li>
+    <li><img src="img/photoshop.jpg"
+        style="width:20px; height:20px;"
+        >Photoshop</li>
+    <li><img src="img/sc.jpg"
+        style="width:20px; height:20px;"
+        >Scratch3.0</li>
 </ui>
 <hr>
 <h1>
     <b>Academic</b>
 </h1>
 <ui>
-<li>난우초등학교 졸업<br></li>
-<li>남강중학교 졸업<br></li>
-<li>성수고등학교 졸업<br></li>
-<li>호서대학교 재학중<br></li>
+<li><a href="https://nanwoo.sen.es.kr/">
+    난우초등학교 졸업</a><br></li>
+<li><a href="https://namkang.sen.ms.kr/">
+    남강중학교 졸업</a><br></li>
+<li><a href="https://seongsu.sen.hs.kr/">
+    성수고등학교 졸업</a><br></li>
+<li><a href="http://www.hoseo.ac.kr/Home/Main.mbz">
+    호서대학교 재학중</a><br></li>
 </ui>
 
 </body>
