--- a/index.html
+++ b/index.html
@@ -3,28 +3,36 @@
 <head>
 <meta charset='utf-8'>
 <style>
+    body {text-align: center;}
     table, th, tr, td {
         border: solid 1px black;
         border-collapse: collapse;
         padding: 8px;
     }
+    h2 {text-shadow: 1px 2px 10px yellow;}
+    .block {background-color: yellow;
+    text-align: center;}
+    .block2 {text-align: center;}
+    a:link {text-decoration: none; color: black;}
+    a:visited {text-decoration: none; color: black;}
+    a:hover {text-decoration: none; color: yellow;}
     </style>
 </head>
 <body>
     <h2>
         22년도 1학기 시간표
     </h2>
-<table>
+<table align="center">
     <tr>
         <td></td>
-        <th>월요일</th>
-        <th>화요일</th>
-        <th>수요일</th>
-        <th>목요일</th>
-        <th>금요일</th>
+        <th class="block2">월요일</th>
+        <th class="block2">화요일</th>
+        <th class="block2">수요일</th>
+        <th class="block2">목요일</th>
+        <th class="block2">금요일</th>
     </tr>
     <tr>
-        <td>1교시</td>
+        <td class="block2">1교시</td>
         <td></td>
         <td></td>
         <td></td>
@@ -32,7 +40,7 @@
         <td></td>
     </tr>
 <tr>
-        <td>2교시</td>
+        <td class="block2">2교시</td>
         <td></td>
         <td></td>
         <td></td>
@@ -40,63 +48,63 @@
         <td></td>
     </tr>
 <tr>
-        <td>3교시</td>
+        <td class="block2">3교시</td>
         <td></td>
-        <td rowspan="2">마케팅의이해</td>
+        <td rowspan="2" class="block">마케팅의이해</td>
         <td></td>
-        <td>채플</td>
+        <td class="block">채플</td>
         <td></td>
     </tr>
 <tr>
-        <td>4교시</td>
+        <td class="block2">4교시</td>
         <td></td>
-        <td>대학영어회화2</td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>5교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td class="block">대학영어회화2</td>
         <td></td>
     </tr>   
 <tr>
-        <td>6교시</td>
-        <td></td>
-        <td rowspan="2">웹프로그래밍</td>
-        <td rowspan="2">실용생활중국어</td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>7교시</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>8교시</td>
-        <td>대학영어<br>강독2</td>
-        <td rowspan="3">4차산업혁명과<br>유비쿼터스</td>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>   
-<tr>
-        <td>9교시</td>
+        <td class="block2">5교시</td>
         <td></td>
         <td></td>
         <td></td>
         <td></td>
     </tr>   
 <tr>
-        <td>10교시</td>
+        <td class="block2">6교시</td>
+        <td></td>
+        <td rowspan="2" class="block">웹프로그래밍</td>
+        <td rowspan="2" class="block">실용생활중국어</td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td class="block2">7교시</td>
         <td></td>
         <td></td>
         <td></td>
     </tr>   
 <tr>
-        <td>11교시</td>
+        <td class="block2">8교시</td>
+        <td class="block">대학영어<br>강독2</td>
+        <td rowspan="3" class="block">4차산업혁명과<br>유비쿼터스</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td class="block2">9교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td class="block2">10교시</td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>   
+<tr>
+        <td class="block2">11교시</td>
         <td></td>
         <td></td>
         <td></td>
@@ -108,6 +116,7 @@
 <a href='form.html'>회원가입</a><br>
 <a href="rubato.html">루바토 펜션 안내</a><br>
 <a href="행사안내.html">호서 국제 기타 페스티벌 안내</a><br>
-<a href="호서 야간 개장.html">호서 야간 개장 안내</a>
+<a href="호서 야간 개장.html">호서 야간 개장 안내</a><br>
+<a href="세일 안내장.html">세일 안내장</a>
 </body>
 </html>
