--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     a:link {text-decoration: none; color: black;}
     a:visited {text-decoration: none; color: black;}
     a:hover {text-decoration: none; color: yellow;}
+    th, td {width: 120px;
+    padding: 10px;
+    height: 30px;
+}
     </style>
 </head>
 <body>
