--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <a href="행사안내.html">호서 국제 기타 페스티벌 안내</a><br>
 <a href="호서 야간 개장.html">호서 야간 개장 안내</a><br>
 <a href="세일 안내장.html">세일 안내장</a><br>
-<a href="월간 계획표.html">월간 계획표</a>
+<a href="월간 계획표.html">월간 계획표</a><br>
+<a href="쇼핑몰 판매 목록.html">쇼핑몰 판매 목록</a>
 </body>
 </html>
