--- a/호서 야간 개장.html
+++ b/호서 야간 개장.html
@@ -18,15 +18,15 @@
 <meta charset='utf-8'>
 </head>
 <body>
-    <form action="신청접수완료.html">
     <h3>주말 야간 개장 안내</h3>
+<form action="신청접수완료.html">
     <ul>
     <li>-<b>기간</b>: 4.28~8.20 18:00~22:00 (입장마감 21시)<br></li>
     <li>-<b>대상</b>: 동물원, 식물원<br></li>
     <li>-<b>프로그램</b>: 야간동물원 관람, 동물생태 설명회, 식물전시<br></li>
     <li>-<b>방문자 신분</b>:
     <input type='radio' name="info">호서대 재학생 <input type='radio' name="info">일반인
-     <button type="submit">방문신청</button></li>
+    <submit><button>방문신청</button></submit></li>
     </ul>
 </form>
 </body>
