--- a/쇼핑몰 판매 목록.html
+++ b/쇼핑몰 판매 목록.html
@@ -28,28 +28,28 @@ margin: 0px 150px 0px 0px;}
 #a3 {float: left;}
 a:link {text-decoration: none; color: black;}
 a:visited {text-decoration: none; color: black;}
-a:hover {text-decoration: none; color: black;}
+a:hover {text-decoration: none; color: Red;}
 .red {color: red;}
 </style>
 </head>
 <body>
-<h3>판매 의류 목록<hr></h3>
-<div id="pro13"><a href="index.html"><img src="img/13pro.png"></a></div>
+<h3>판매 핸드폰 목록<hr></h3>
+<div id="pro13"><a href="index.html"><img src="img/13pro.PNG"></a></div>
 <div id="d1"><b>아이폰13pro</b></div>
 <div id="u1"><ul id="b1">
 	<li><b class="red">1,350,000부터</b></li>
 	<li>AppleCare+ 98,000부터</li>
 </ul></div>
-<div id="a1"><a href="20190577변희재.html">변희재</a></div>
+<div id="a1"><a href="20190577변희재.html">Apple</a></div>
 <div class="clear"></div>
 <hr>
-<div id="n13"><a href="index.html"><img src="img/13.png"></a></div>
+<div id="n13"><a href="index.html"><img src="img/13.PNG"></a></div>
 <div id="d2"><b>아이폰13</b></div>
 <div id="u2"><ul id="b2">
 	<li><b class="red">950,000부터</b></li>
 	<li>AppleCare+ 98,000부터</li>
 </ul></div>
-<div id="a2"><a href="20190577변희재.html">변희재</a></div>
+<div id="a2"><a href="20190577변희재.html">Apple</a></div>
 <div class="clear"></div>
 <hr>
 <div id="se"><a href="index.html"><img src="img/se.PNG"></a></div>
@@ -58,7 +58,7 @@ a:hover {text-decoration: none; color: black;}
 	<li><b class="red">590,000부터</b></li>
 	<li>AppleCare+ 98,000부터</li>
 </ul></div>
-<div id="a3"><a href="20190577변희재.html">변희재</a></div>
+<div id="a3"><a href="20190577변희재.html">Apple</a></div>
 <div class="clear"></div>
 <hr>
 </body>
