--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta charset='utf-8'>
+<title>HeeJae`s Website</title>
 <style>
 * {margin:0;
 border:0;}
 body {background-color: gainsboro;}
 .clear {clear: both;}
+#all{
+	margin: 0 auto;
+	width: 1200px;
+  text-align: center;
+
+}
 #inline1 {float: left; margin-right: 50px; margin-left: 50px;}
 #inline2 {float: left;}
 table, th, tr, td {
@@ -31,8 +38,7 @@ border: double 2px gray;}
 a:link {text-decoration: none; color: black;}
 a:visited {text-decoration: none; color: black;}
 a:hover {text-decoration: none; color: yellow;}
-header, nav, section, aside, footer {
-	border: solid 0px red;}
+
 header {
 	width: 1200px;
 	height:100px; text-align: center;
@@ -40,6 +46,7 @@ header {
 nav {
 	width: 1200px;
 	height: 100px;
+  text-align: center;
 }
 
 section {
@@ -52,7 +59,7 @@ section {
 }
 aside {
 	width: 300px;
-	height: 600px;
+	height: 800px;
 	float: left;
 	margin-top: 10px;
 }
@@ -91,14 +98,14 @@ text-align: left;}
 img {width: 80px; height: 80px;}
 #insta {float:left;}
 #face {float:left;}
-#sns {margin-left: 500px;
-
+#sns {	margin-left: 520px;
 }
 </style>
 </head>
 <body>
+<div id="all">
 <header>
-	<div id="title"><span class="sp">HeeJae`s Web</span></div>
+	<div id="title"><span class="sp">H&nbspE&nbspE&nbspJ&nbspA&nbspE&nbsp</span></div>
 </header>
 <nav>
 <div id="sns">
@@ -295,13 +302,17 @@ img {width: 80px; height: 80px;}
 	<div class="box"><a href="호서 야간 개장.html">호서 야간 개장 안내</a></div>
 	<div class="box"><a href="세일 안내장.html">세일 안내장</a></div>
 	<div class="box"><a href="쇼핑몰 판매 목록.html">쇼핑몰 판매 목록</a></div>
+  <div class="box"><a href="포토아카데미.html">포토아카데미</a></div>
+</div>
 </div>
 </aside>
 <div class="clear"></div>
+<div id="all">
 <footer>
 	<div><a href="http://www.hoseo.ac.kr/Home/Main.mbz"><img src="img/1.jpg"></a></div>
 	호서대학교 디지털 기술경영학과<br>
 	(천안캠퍼스 1호관 105호) 041-560-8348
 </footer>
+</div>
 </body>
 </html>
